[ticket/12613] Renamed jump-to to page-jump to prevent confusion
Jump-to can easily be confused with forum-jump.
Also switched the lang vars to reflect changes better

PHPBB3-12613

--- a/phpBB/styles/prosilver/theme/colours.css
+++ b/phpBB/styles/prosilver/theme/colours.css
@@ -188,7 +188,7 @@ dl.details dd {
 	border-color: #B4BAC0;
 }
 
-.pagination li.next a, .pagination li.previous a, .pagination li.jump-to a {
+.pagination li.next a, .pagination li.previous a, .pagination li.page-jump a {
 	background-image: url("./images/icons_pagination.png");
 }
 
